# simlpe-blog

./: .gitignore  Makefile  README.md  pyproject.toml
django_blog/: settings.py  urls.py  views.py
django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
django_blog/article/migrations/: 0001_initial.py  0002_alter_article_tegs.py  0003_alter_article_tegs.py
django_blog/article/templates/articles/: article.html  form.html  form_edit.html  index.html
django_blog/teg/: admin.py  apps.py  models.py
django_blog/teg/migrations/: 0001_initial.py  0002_alter_tegs_name.py
django_blog/templates/: about.html  base.html  heder.html  index.html
django_blog/templates/errors/: 404.html
