[tool.poetry]
name = "simple-blog"
version = "0.1.0"
description = ""
authors = ["Barzabek <kochenko1995@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-bootstrap4 = "^23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
